# maya_pybind

./: .gitignore  CMakeLists.txt  mayaCommand.cpp
mayaCommand/: mayaCommand.pyd
